tests/fixtures/errors/required_param_not_pub.gcl
// Error: required param needs a value supplied at eval time.
param x: Dimensionless;
